adding pagination for category
