# internal/domain/category/controller/router.go
@@ -4,6 +4,7 @@ import (
 	"context"
 
 	"miniWiki/internal/domain/category/model"
+	"miniWiki/pkg/utils"
 
 	"github.com/go-chi/chi/v5"
 )
@@ -11,7 +12,7 @@ import (
 type CategoryService interface {
 	CreateCategory(ctx context.Context, request model.CreateCategoryRequest) (*int, error)
 	DeleteCategory(ctx context.Context, request model.DeleteCategoryRequest) error
-	GetCategories(ctx context.Context) ([]model.Category, error)
+	GetCategories(ctx context.Context, pagination utils.Pagination) (*utils.Pagination, error)
 	GetCategory(ctx context.Context, request model.GetCategoryRequest) (*model.Category, error)
 }
 
